# pact

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  llms.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  stale.yml
Formula/: pact-lang.rb
crates/pact-build/: Cargo.toml
crates/pact-build/src/: builtins.rs  config.rs  emit_agent_card.rs  emit_claude.rs  emit_claude_md.rs  emit_common.rs  emit_crewai.rs  emit_cursor.rs  emit_gemini.rs  emit_markdown.rs  emit_openai.rs  emit_skill.rs  emit_toml.rs  guardrails.rs  lib.rs  mcp_recommend.rs  output_format.rs
crates/pact-build/tests/: build_integration.rs
crates/pact-cli/: Cargo.toml
crates/pact-cli/src/: main.rs
crates/pact-cli/tests/: cli_integration.rs
crates/pact-connectors/: Cargo.toml
crates/pact-connectors/src/: lib.rs
crates/pact-connectors/src/connectors/: airtable.rs  figma.rs  gdrive.rs  github.rs  jira.rs  linear.rs  mermaid.rs  mod.rs  notion.rs  resend.rs  slack.rs  teams.rs  tests.rs
crates/pact-core/: Cargo.toml
crates/pact-core/benches/: pipeline.rs
crates/pact-core/fuzz/: Cargo.toml
crates/pact-core/fuzz/fuzz_targets/: fuzz_lexer.rs  fuzz_parser.rs  fuzz_roundtrip.rs
crates/pact-core/src/: doc.rs  formatter.rs  lib.rs  loader.rs  memory.rs  span.rs  template.rs
crates/pact-core/src/ast/: expr.rs  mod.rs  stmt.rs  types.rs  visit.rs
crates/pact-core/src/checker/: mod.rs  permissions.rs  scope.rs  types.rs
crates/pact-core/src/interpreter/: agent.rs  env.rs  mod.rs  value.rs
crates/pact-core/src/lexer/: cursor.rs  mod.rs  token.rs
crates/pact-core/src/parser/: expr.rs  mod.rs  stmt.rs  types.rs
crates/pact-core/tests/: integration.rs
crates/pact-dispatch/: Cargo.toml
crates/pact-dispatch/src/: audit.rs  cache.rs  client.rs  convert.rs  executor.rs  federated.rs  lib.rs  mcp_client.rs  mediation.rs  observation_store.rs  ollama.rs  openai.rs  providers.rs  rate_limit.rs  search.rs  summarizer.rs  tool_loop.rs  types.rs
crates/pact-dispatch/tests/: dispatch_integration.rs  federation_integration.rs
crates/pact-federation/: Cargo.toml
crates/pact-federation/src/: client.rs  discovery.rs  error.rs  lib.rs  protocol.rs  registry.rs
crates/pact-lsp/: Cargo.toml
crates/pact-lsp/src/: backend.rs  main.rs  symbol_index.rs
crates/pact-mcp/: Cargo.toml
crates/pact-mcp/src/: main.rs  protocol.rs  server.rs  tools.rs
crates/pact-mermaid/: Cargo.toml
crates/pact-mermaid/src/: agentflow.rs  agentflow_convert.rs  agentflow_emit.rs  agentflow_json.rs  agentflow_parse.rs  convert.rs  emit.rs  lib.rs  parser.rs
crates/pact-registry/: Cargo.toml
crates/pact-registry/src/: cache.rs  client.rs  error.rs  lib.rs  lockfile.rs  manifest.rs  resolver.rs
crates/pact-wasm/: Cargo.toml
crates/pact-wasm/src/: lib.rs
editors/vscode/: .vscodeignore  language-configuration.json  package-lock.json  package.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: pact.tmLanguage.json
examples/: 05_mermaid_ost_roadmap.agentflow.mmd  age_verified_website.pact  ci_agent.pact  code_review.pact  coffee_run.pact  coffee_website.agentflow.mmd  coffee_website.pact  customer_support.pact  data_analyst.pact  federation.pact  hello_agent.pact  incident_response.agentflow.mmd  incident_response.pact  my_first.pact  rag_pipeline.pact  research.mmd  research_flow.mmd  research_flow.pact  security_scanner.pact  test_roundtrip.agentflow.mmd  website_builder.agentflow.mmd  website_builder.mmd  website_builder.pact
examples/shared/: types.pact
showcase/: 01_podcast_studio.pact  02_legal_contract_review.pact  03_ecommerce_fulfillment.pact  04_medical_triage.agentflow.mmd  04_medical_triage.pact  05_mermaid_ost_roadmap.agentflow.mmd  05_mermaid_ost_roadmap.pact  05_real_estate_analyzer.pact  06_educational_tutor.pact  07_devops_pipeline.pact  08_content_marketing.pact  09_financial_advisor.pact  10_game_narrative.pact
