[package]
name = "pact-build"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Lars Sabadin"]
description = "Build pipeline for PACT — generates Claude/OpenAI tool schemas, guardrails, and deployment artifacts"
license = "MIT"
repository = "https://github.com/pact-lang/pact"
homepage = "https://github.com/pact-lang/pact"
keywords = ["ai", "agents", "language", "orchestration", "llm"]
categories = ["compilers", "development-tools"]
readme = "../../README.md"

[dependencies]
pact-core = { path = "../pact-core" }
toml = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
