[package]
name = "pact-connectors"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Lars Sabadin"]
description = "External service connectors for PACT agent workflows"
license = "MIT"
repository = "https://github.com/pact-lang/pact"
homepage = "https://github.com/pact-lang/pact"
keywords = ["ai", "agents", "connectors", "integrations", "llm"]
categories = ["development-tools", "web-programming"]
readme = "../../README.md"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros"] }
tracing = "0.1"
urlencoding = "2"
chrono = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
