[package]
name = "pact-core"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Lars Sabadin"]
description = "Core library for PACT — lexer, parser, AST, type checker, and interpreter for the Programmable Agent Contract Toolkit"
license = "MIT"
repository = "https://github.com/pact-lang/pact"
homepage = "https://github.com/pact-lang/pact"
keywords = ["ai", "agents", "language", "orchestration", "llm"]
categories = ["compilers", "development-tools"]
readme = "../../README.md"

[dependencies]
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pipeline"
harness = false
