[package]
name = "pact-dispatch"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Lars Sabadin"]
description = "Dispatch engine for PACT — Claude, OpenAI, and Ollama backends with retry, caching, and mediation"
license = "MIT"
repository = "https://github.com/pact-lang/pact"
homepage = "https://github.com/pact-lang/pact"
keywords = ["ai", "agents", "language", "orchestration", "llm"]
categories = ["development-tools"]
readme = "../../README.md"

[dependencies]
pact-core = { path = "../pact-core" }
pact-build = { path = "../pact-build" }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "sync", "signal"] }
futures-util = "0.3"
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
dotenvy = "0.15"
urlencoding = "2"
glob = "0.3"
tracing = "0.1"
reqwest-eventsource = "0.6"
