[package]
name = "pact-lsp"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Lars Sabadin"]
description = "Language Server Protocol implementation for PACT"
license = "MIT"
repository = "https://github.com/pact-lang/pact"
homepage = "https://github.com/pact-lang/pact"
keywords = ["ai", "agents", "language", "lsp", "llm"]
categories = ["development-tools"]
readme = "../../README.md"

[[bin]]
name = "pact-lsp"
path = "src/main.rs"

[dependencies]
pact-core = { path = "../pact-core" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
ropey = "1"
miette = { version = "7", features = ["fancy"] }
