[package]
name = "pact-mcp"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Lars Sabadin"]
description = "Model Context Protocol server for PACT"
license = "MIT"
repository = "https://github.com/pact-lang/pact"
homepage = "https://github.com/pact-lang/pact"
keywords = ["ai", "agents", "language", "mcp", "llm"]
categories = ["development-tools"]
readme = "../../README.md"

[[bin]]
name = "pact-mcp"
path = "src/main.rs"

[dependencies]
pact-core = { path = "../pact-core" }
pact-build = { path = "../pact-build" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
