[package]
name = "pact-mermaid"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Lars Sabadin"]
description = "Bidirectional Mermaid diagram conversion for PACT agent contracts"
license = "MIT"
repository = "https://github.com/pact-lang/pact"
homepage = "https://github.com/pact-lang/pact"
keywords = ["ai", "agents", "language", "orchestration", "mermaid"]
categories = ["development-tools"]
readme = "../../README.md"

[dependencies]
pact-core = { path = "../pact-core" }
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
