[package]
name = "pact-registry"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Lars Sabadin"]
description = "Package registry client for PACT — GitHub-backed package fetching, caching, and resolution"
license = "MIT"
repository = "https://github.com/pact-lang/pact"
homepage = "https://github.com/pact-lang/pact"
keywords = ["ai", "agents", "language", "registry", "packages"]
categories = ["development-tools"]
readme = "../../README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
semver = { version = "1", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
thiserror = "2"
tracing = "0.1"
sha2 = "0.10"
dirs = "5"
tar = "0.4"
flate2 = "1"
dotenvy = "0.15"
