[package]
name = "pact-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Lars Sabadin"]
description = "WebAssembly bindings for PACT — convert between .pact and Mermaid agentflow"
license = "MIT"
repository = "https://github.com/pact-lang/pact"
homepage = "https://github.com/pact-lang/pact"
keywords = ["ai", "agents", "language", "wasm", "mermaid"]
categories = ["wasm", "development-tools"]
readme = "../../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pact-core = { path = "../pact-core" }
pact-mermaid = { path = "../pact-mermaid" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
